--- a/docs/guides/specify-runtime-options.ipynb
+++ b/docs/guides/specify-runtime-options.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "929fb1a3-e7d9-4904-9f73-540a1ed39be0",
+   "id": "8bbb8d7d-bcd5-4092-9df1-9930c67b17bc",
    "metadata": {},
    "source": [
     "# Specify options\n",
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "05271104-11d9-4f2b-8291-cfedd67c9a2f",
+   "id": "4b40f0e5-2db0-4ccc-9c07-bdb71d2f5b91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a65d50b-74cf-4944-a968-c169357aa7a1",
+   "id": "ba2f5146-2781-49da-9fa2-8a22647225d0",
    "metadata": {},
    "source": [
     "#### Dictionary\n",
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "14330c28-5789-4463-869c-7bfd700c935d",
+   "id": "0ee1eaf6-c221-437f-8ff8-40ec2aa937c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa2080bc-2859-4862-8458-d0ff0e0279eb",
+   "id": "fc9a759a-6d43-4372-bad2-87512d43b255",
    "metadata": {},
    "source": [
     "### Update options after initialization\n",
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "df0ad092-f547-446a-9c76-8b2221763bfc",
+   "id": "71de6acf-77a5-460f-ac54-f88f7a4d2fa6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b38e54b-a3d7-49cd-8678-eb61cad40adc",
+   "id": "fde8c5bf-d914-4806-b55e-1f33aa643204",
    "metadata": {},
    "source": [
     "<span id=\"run-method\"></span>\n",
@@ -147,10 +147,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2954d3be-31bf-4c5c-8a2c-3d0f075b372d",
+   "execution_count": 1,
+   "id": "f2c12ead-4785-4d4f-bf4a-f015295d7083",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<RuntimeJobV2('cxc7j3rrkac0008hvnkg', 'sampler')>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "from qiskit_ibm_runtime import SamplerV2 as Sampler\n",
@@ -185,7 +196,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c59daf1-1901-47ef-816e-b14a79940fcb",
+   "id": "8be4bd84-9060-437a-85f4-3d996f3e581f",
    "metadata": {},
    "source": [
     "### Special cases\n",
@@ -202,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1e748833-fdb8-4a26-a945-1dcd8e397284",
+   "id": "80c10c6d-a6df-460a-bf5f-a5bac3588c1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5288f420-978f-45b9-a08c-101b690092e0",
+   "id": "52024f25-74ef-445a-9df8-d76da4ec7a32",
    "metadata": {},
    "source": [
     "#### Shots (Sampler only)\n",
@@ -285,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "010ce2fc-e21c-40e9-bcdd-7e84e56c281a",
+   "id": "43ed5d23-8d2e-43a7-82a9-b563de861ab1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28bc74f1-4904-4a3a-9dd7-a62d4a51db93",
+   "id": "81196237-227f-449e-a780-c21fb328a7df",
    "metadata": {},
    "source": [
     "### Maximum execution time\n",
@@ -341,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "54ad98f7-18ae-47e7-a1eb-2fca55e15f8b",
+   "id": "31bd9edf-2c9e-44be-9e30-71a8415103aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +369,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd579ab5-f108-4845-a037-86ea49b44981",
+   "id": "eabb08cf-e67c-452a-8aa5-d028baee77e0",
    "metadata": {},
    "source": [
     "<span id=\"no-error-mitigation\"></span>\n",
@@ -374,7 +385,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f5147d44-112e-4620-8550-091b65b6793a",
+   "id": "9fe17f58-c273-49db-b35f-f698ab44319f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +408,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "249a7582-b189-48f0-9729-d164001afb28",
+   "id": "9b86001b-718a-4d72-b3b5-4a67eabf0a45",
    "metadata": {},
    "source": [
     "## Next steps\n",
