--- a/docs/guides/serverless-template-hamiltonian-simulation.ipynb
+++ b/docs/guides/serverless-template-hamiltonian-simulation.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "b3e994de-6477-421d-8a9a-6b20d45260ae",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -15,6 +16,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "31aee42c-1834-4fae-a05f-f78d8e5db7c0",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -42,6 +44,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5103c621-809d-48e9-ac86-2bf02916e2af",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -61,6 +64,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e451f954-1d8f-4687-a7e9-e4b0dfa170f3",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -79,6 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "35f5800c-163d-47a6-9fcf-13377be57282",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -98,6 +103,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "115c14aa-5028-46f9-ab19-b49d47519636",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -114,6 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "5e1e974b-feaa-47ce-abd1-65d442e8176e",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -166,6 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "3f2629d5-5183-432a-8802-115a3b2f6ff7",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -224,6 +232,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ac4e21bf-ccec-459e-984b-dc6a13ea56c8",
    "metadata": {},
    "source": [
     "When the function template is running, it is helpful to return information in the logs by using print statements, so that you can better evaluate the workload's progress. Following is a simple example of printing the `estimator_options` so  there is a record of the actual Estimator options used. There are many more similar examples throughout the program to report progress during execution, including the value of the objective function during the iterative component of AQC-Tensor, and the two-qubit depth of the final instruction set architecture (ISA) circuit intended for execution on hardware."
@@ -232,6 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "be933b77-fb13-4875-9734-4226067bc8d2",
    "metadata": {},
    "outputs": [
     {
@@ -250,6 +260,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fb65718c-8837-4610-87b7-59e6dc7abb80",
    "metadata": {},
    "source": [
     "### Validate the inputs\n",
@@ -260,6 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "0af1aee2-5771-4ae1-82dc-3ec08943de54",
    "metadata": {},
    "outputs": [
     {
@@ -283,6 +295,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0e5495ee-82e2-43dc-bca7-f8e81f8b6302",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -299,6 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "1677fa7c-3b4a-4a24-b1e4-e03d9b3c49da",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -323,6 +337,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3acd5522-a880-4de7-9251-2d68efc261ad",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -341,6 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "92b59882-2844-4312-a09b-3da02c63f60b",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -475,6 +491,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ae8e53a6-2106-4753-ad1a-ebc146cd44ab",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -491,6 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "1db2749f-1285-48c6-8ec3-bc9f422686e2",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -528,6 +546,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c41b9c0e-1f00-454c-acff-c194cc16e03e",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -544,6 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "e7c6c770-0453-4ad7-9a3e-20a47208768a",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -574,6 +594,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3a603817-abaf-4403-beea-cca838a59577",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -588,6 +609,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "b7525014-a473-4d9d-b7cb-9c590f2364ae",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -636,6 +658,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "12df35c4-4f1c-48cb-a323-d0cf33422fab",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -652,6 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "bfb8ab87-c42d-4993-92bd-8b38364dc443",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -676,6 +700,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "220f8bc8-4f04-41d3-86f1-15e9c2f45a56",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -696,6 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "313bd03b-bf9b-4e6c-aa05-1fe8def3868d",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -713,6 +739,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e9c495d4-cdab-4329-b65d-d111029aee64",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -727,6 +754,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "ca386323-d92d-4c41-908b-1670324e1264",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -751,6 +779,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "80a2c6b5-1f1e-4e90-9b1f-75907caf1df3",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -776,6 +805,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "06677105-627a-4948-aac7-071f44327a0b",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -790,6 +820,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "11f14088-8eca-4a99-a291-3f37a61b0d26",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -801,10 +832,7 @@
     {
      "data": {
       "text/plain": [
-       "[QiskitFunction(hamsim_template),\n",
-       " QiskitFunction(function_template_hamsim),\n",
-       " QiskitFunction(template_hamiltonian_simulation),\n",
-       " QiskitFunction(aqc_tutorial_L50)]"
+       " QiskitFunction(template_hamiltonian_simulation),\n"
       ]
      },
      "execution_count": 15,
@@ -818,6 +846,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "385bda3e-73de-413c-8e45-cf7047303219",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -834,6 +863,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "d4ff8dea-95ab-4cc9-92b9-e28e277e76f2",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -848,6 +878,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "57964962-87e9-4c0b-a717-cb620019960e",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -862,6 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "e5d1555c-9abb-4fef-b8a2-f8d1b723df01",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -888,7 +920,14 @@
     "\n",
     "hamiltonian = SparsePauliOp.from_sparse_list(\n",
     "    chain.from_iterable(\n",
-    "        [[(\"XX\", (i, j), Js[i] / 2), (\"YY\", (i, j), Js[i] / 2), (\"ZZ\", (i, j), Js[i])] for i, j in edges]\n",
+    "        [\n",
+    "            [\n",
+    "                (\"XX\", (i, j), Js[i] / 2),\n",
+    "                (\"YY\", (i, j), Js[i] / 2),\n",
+    "                (\"ZZ\", (i, j), Js[i]),\n",
+    "            ]\n",
+    "            for i, j in edges\n",
+    "        ]\n",
     "    ),\n",
     "    num_qubits=L,\n",
     ")\n",
@@ -900,6 +939,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "7ec5ab02-280c-4c04-8e63-e5354eb8ebb9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -914,6 +954,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
+   "id": "ac8d8fec-0290-4d6b-a18c-afd02acfa850",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -950,6 +991,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2249cabc-6821-4d84-b4d8-e519c2d94a5c",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -964,6 +1006,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
+   "id": "ed3b744d-cb00-43e0-907c-34dfebe2fa9b",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -989,6 +1032,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "83751f45-ab37-4037-bc77-d1aef91ed46c",
    "metadata": {},
    "source": [
     "After the job is running, you can fetch logs created from the `print()` outputs. These can provide actionable information about the progress of the Hamiltonian simulation workflow. For example, the value of the objective function during the iterative component of AQC, or the two-qubit depth of the final ISA circuit intended for execution on hardware."
@@ -997,6 +1041,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
+   "id": "3be62464-18b0-4598-b386-0ac0cc9cccb6",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -1019,6 +1064,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a8384509-2a9d-44e6-a729-40464ff52bea",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -1033,6 +1079,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
+   "id": "fc678bcd-539d-4970-86e0-9a69f0a367ef",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -1060,12 +1107,15 @@
    "source": [
     "result = job.result()\n",
     "\n",
-    "del result[\"aqc_final_parameters\"]  # the list is too long to conveniently display here\n",
+    "del result[\n",
+    "    \"aqc_final_parameters\"\n",
+    "]  # the list is too long to conveniently display here\n",
     "result"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "12b0ccfe-325a-4939-81e7-58d94557990d",
    "metadata": {},
    "source": [
     "After the job completes, the entire logging output will be available."
@@ -1074,6 +1124,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
+   "id": "cb722373-cbfb-45a7-a2b5-d7a97e18ee6c",
    "metadata": {},
    "outputs": [
     {
@@ -1273,6 +1324,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "196d6261-e26b-4057-ae55-19f003fdc10a",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -1293,6 +1345,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
+   "id": "0a5ab26b-baea-48d0-979e-485df3118ac6",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -1314,7 +1367,7 @@
  "metadata": {
   "description": "How to create a parallel transpilation program and deploy it to IBM Quantum Platform to use as a reusable remote service.",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1328,7 +1381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3"
   },
   "title": "Build a Qiskit Function template for Hamiltonian simulation"
  },
