--- a/docs/api/qiskit-ibm-transpiler/release-notes.mdx
+++ b/docs/api/qiskit-ibm-transpiler/release-notes.mdx
@@ -10,23 +10,31 @@ in_page_toc_max_heading_level: 2
 
 <span id="id1" />
 
+## 0.9.3 (2024-12-18)
+
+### Other notes
+
+*   Pin qiskit\_ibm\_ai\_local\_transpiler version to 0.1.4 and Qiskit to \<1.3 ([149](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/149))
+
+<span id="id2" />
+
 ## 0.9.2 (2024-12-12)
 
 ### Bug fixes
 
 *   Pin qiskit\_ibm\_ai\_local\_transpiler version to 0.1.3 ([145](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/145))
 
-<span id="id2" />
+<span id="id3" />
 
 ## 0.9.1 (2024-11-15)
 
-<span id="id3" />
+<span id="id4" />
 
 ### Bug fixes
 
 *   Fix optimization\_preferences\` used in generate\_ai\_pass\_manager method. Adding related tests ([130](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/130))
 
-<span id="id4" />
+<span id="id5" />
 
 ## 0.9.0 (2024-11-14)
 
@@ -34,32 +42,32 @@ in_page_toc_max_heading_level: 2
 
 *   Adding local mode for routing, permutations, linear functions and cliffords. ([125](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/125))
 
-<span id="id5" />
+<span id="id6" />
 
 ## 0.8.2 (2024-11-13)
 
-<span id="id6" />
+<span id="id7" />
 
 ### Bug fixes
 
 *   Added fix to avoid random test errors. Check that result exists when result is success. ([105](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/105))
 *   Fix pauli better circuit replacement. ([122](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/122))
 
-<span id="id7" />
+<span id="id8" />
 
 ## 0.8.1 (2024-11-13)
 
-<span id="id8" />
+<span id="id9" />
 
 ### New features
 
 *   Updating the README to reflect the availability of the AIPauliNetworkSynthesis feature. ([121](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/121))
 
-<span id="id9" />
+<span id="id10" />
 
 ## 0.8.0 (2024-11-13)
 
-<span id="id10" />
+<span id="id11" />
 
 ### New features
 
@@ -68,117 +76,119 @@ in_page_toc_max_heading_level: 2
 *   Retry http requests after any RequestException ([111](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/111))
 *   Add Pauli Network synthesis pass. ([112](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/112))
 
-<span id="id11" />
+<span id="id12" />
 
 ## 0.7.4 (2024-11-11)
 
-<span id="id12" />
+<span id="id13" />
 
 ### New features
 
 *   Use QPY as exchange format with service ([104](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/104))
 
-<span id="id13" />
+<span id="id14" />
 
 ## 0.7.3 (2024-11-06)
 
-<span id="id14" />
+<span id="id15" />
 
 ### New features
 
 *   Retry http requests after any RequestException ([111](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/111))
 
-<span id="id15" />
+<span id="id16" />
 
 ## 0.7.2 (2024-10-31)
 
-<span id="id16" />
+<span id="id17" />
 
 ### Bug fixes
 
 *   Added fix to avoid random test errors. Check that result exists when result is success. ([105](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/105))
 
-<span id="id17" />
+<span id="id18" />
 
 ## 0.7.1 (2024-10-30)
 
-<span id="id18" />
+<span id="id19" />
 
 ### New features
 
 *   In case of failure, always retry the GET request to retrieve a result unitl the timeout is reached. Increase the delay between requests to 5 seconds when we are over 1 minute. Retry transpilation POST request three times in case of failure. ([97](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/97))
 
-<span id="id19" />
+<span id="id20" />
 
 ## 0.7.0 (2024-09-18)
 
-<span id="id20" />
+<span id="id21" />
 
 ### New features
 
 *   Adds support for sending the use\_fractional\_gates option to the transpile service ([83](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/83))
 *   Adds iterative decomposition to Qasm3 export. ([85](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/85))
 
+<span id="id22" />
+
 ### Other notes
 
 *   Removes unneeded benchmark method ([81](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/81))
 *   Adds test to verify that a circuit with a barrier will be transpiled ([84](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/84))
 
-<span id="id21" />
-
-## 0.6.5 (2024-11-11)
-
-<span id="id22" />
-
-### New features
-
-*   Use QPY as exchange format with service ([104](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/104))
-
 <span id="id23" />
 
-## 0.6.4 (2024-11-07)
+## 0.6.5 (2024-11-11)
 
 <span id="id24" />
 
 ### New features
 
-*   Retry http requests after any RequestException ([111](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/111))
+*   Use QPY as exchange format with service ([104](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/104))
 
 <span id="id25" />
 
-## 0.6.3 (2024-10-31)
+## 0.6.4 (2024-11-07)
 
 <span id="id26" />
+
+### New features
+
+*   Retry http requests after any RequestException ([111](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/111))
+
+<span id="id27" />
+
+## 0.6.3 (2024-10-31)
+
+<span id="id28" />
 
 ### Bug fixes
 
 *   Added fix to avoid random test errors. Check that result exists when result is success. ([105](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/105))
 
-<span id="id27" />
+<span id="id29" />
 
 ## 0.6.2 (2024-10-30)
 
-<span id="id28" />
+<span id="id30" />
 
 ### New features
 
 *   In case of failure, always retry the GET request to retrieve a result unitl the timeout is reached. Increase the delay between requests to 5 seconds when we are over 1 minute. Retry transpilation POST request three times in case of failure. ([97](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/97))
 
-<span id="id29" />
+<span id="id31" />
 
 ## 0.6.1 (2024-09-17)
 
-<span id="id30" />
+<span id="id32" />
 
 ### Bug fixes
 
 *   Fixes a bug with ECR gates coming from Qiskit when parsing using OpenQASM2 ([74](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/74))
 
-<span id="id31" />
+<span id="id33" />
 
 ## 0.6.0 (2024-09-16)
 
-<span id="id32" />
+<span id="id34" />
 
 ### New features
 
@@ -188,84 +198,84 @@ in_page_toc_max_heading_level: 2
 
 *   Enabling coupling\_map as options to the AI Synthesis passes ([70](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/70))
 
-<span id="id33" />
+<span id="id35" />
 
 ### Bug fixes
 
 *   Keep trying to get results even in case of HTTPError exception with status 520 ([52](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/52))
 *   Fixing the type of ECR gates when loading circuits from the Qiskit Transpiler Service ([63](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/63))
 
-<span id="id34" />
-
-## 0.5.7 (2024-11-11)
-
-<span id="id35" />
-
-### New features
-
-*   Use QPY as exchange format with service ([104](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/104))
-
 <span id="id36" />
 
-## 0.5.6 (2024-11-07)
+## 0.5.7 (2024-11-11)
 
 <span id="id37" />
 
 ### New features
 
-*   Retry http requests after any RequestException ([111](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/111))
+*   Use QPY as exchange format with service ([104](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/104))
 
 <span id="id38" />
 
-## 0.5.5 (2024-10-31)
+## 0.5.6 (2024-11-07)
 
 <span id="id39" />
+
+### New features
+
+*   Retry http requests after any RequestException ([111](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/111))
+
+<span id="id40" />
+
+## 0.5.5 (2024-10-31)
+
+<span id="id41" />
 
 ### Bug fixes
 
 *   Added fix to avoid random test errors. Check that result exists when result is success. ([105](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/105))
 
-<span id="id40" />
+<span id="id42" />
 
 ## 0.5.4 (2024-10-30)
 
-<span id="id41" />
+<span id="id43" />
 
 ### New features
 
 *   In case of failure, always retry the GET request to retrieve a result unitl the timeout is reached. Increase the delay between requests to 5 seconds when we are over 1 minute. Retry transpilation POST request three times in case of failure. ([97](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/97))
 
-<span id="id42" />
-
-## 0.5.3 (2024-09-17)
-
-<span id="id43" />
-
-### Bug fixes
-
-*   Fixes a bug with ECR gates coming from Qiskit when parsing using OpenQASM2 ([74](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/74))
-
 <span id="id44" />
 
-## 0.5.2 (2024-09-12)
+## 0.5.3 (2024-09-17)
 
 <span id="id45" />
 
 ### Bug fixes
 
-*   Fixing the type of ECR gates when loading circuits from the qiskit transpiler service ([63](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/63))
+*   Fixes a bug with ECR gates coming from Qiskit when parsing using OpenQASM2 ([74](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/74))
 
 <span id="id46" />
 
-## 0.5.1 (2024-08-29)
+## 0.5.2 (2024-09-12)
 
 <span id="id47" />
 
 ### Bug fixes
 
-*   Keep trying getting result even in case of HTTPError exception with status 520 ([52](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/52))
+*   Fixing the type of ECR gates when loading circuits from the qiskit transpiler service ([63](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/63))
 
 <span id="id48" />
+
+## 0.5.1 (2024-08-29)
+
+<span id="id49" />
+
+### Bug fixes
+
+*   Keep trying getting result even in case of HTTPError exception with status 520 ([52](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/52))
+
+<span id="id50" />
 
 ## 0.5.0 (2024-08-27)
 
@@ -273,47 +283,47 @@ in_page_toc_max_heading_level: 2
 
 *   Rename package to `qiskit-ibm-transpiler` ([43](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/43))
 
-<span id="id49" />
-
-## 0.4.10 (2024-09-17)
-
-<span id="id50" />
-
-### Bug fixes
-
-*   Fixes a bug with ECR gates coming from Qiskit when parsing using OpenQASM2 ([77](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/77))
-
 <span id="id51" />
 
-## 0.4.9 (2024-09-12)
+## 0.4.10 (2024-09-17)
 
 <span id="id52" />
 
 ### Bug fixes
 
-*   Fixing the type of ECR gates when loading circuits from the qiskit transpiler service ([64](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/64))
+*   Fixes a bug with ECR gates coming from Qiskit when parsing using OpenQASM2 ([77](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/77))
 
 <span id="id53" />
 
-## 0.4.8 (2024-08-29)
+## 0.4.9 (2024-09-12)
 
 <span id="id54" />
 
 ### Bug fixes
 
-*   Keep trying getting result even in case of HTTPError exception with status 520 ([54](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/54))
+*   Fixing the type of ECR gates when loading circuits from the qiskit transpiler service ([64](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/64))
 
 <span id="id55" />
 
-## 0.4.7 (2024-08-27)
+## 0.4.8 (2024-08-29)
 
 <span id="id56" />
 
 ### Bug fixes
 
-*   Add stacklevel to DeprecationWarning so it appears in Jupyter notebooks ([49](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/49))
+*   Keep trying getting result even in case of HTTPError exception with status 520 ([54](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/54))
 
 <span id="id57" />
+
+## 0.4.7 (2024-08-27)
+
+<span id="id58" />
+
+### Bug fixes
+
+*   Add stacklevel to DeprecationWarning so it appears in Jupyter notebooks ([49](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/49))
+
+<span id="id59" />
 
 ## 0.4.6 (2024-08-23)
 
@@ -321,179 +331,179 @@ in_page_toc_max_heading_level: 2
 
 *   Add deprecation notice in preparation for project rename to `qiskit-ibm-transpiler` ([40](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/40))
 
-<span id="id58" />
+<span id="id60" />
 
 ### Bug fixes
 
 *   Forward incoming error when decoding fails ([36](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/36))
 
-<span id="id59" />
+<span id="id61" />
 
 ## 0.4.5 (2024-08-01)
 
-<span id="id60" />
+<span id="id62" />
 
 ### New features
 
 *   Enable programmatic config of polling timeout ([28](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/28))
 
-<span id="id61" />
+<span id="id63" />
 
 ### Bug fixes
 
 *   Using the declared `ai_layout_mode` in the TranspilerService’s run method ([25](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/25))
 
-<span id="id62" />
+<span id="id64" />
 
 ## 0.4.4 (2024-07-25)
 
-<span id="id63" />
+<span id="id65" />
 
 ### Upgrade notes
 
 *   Increasing timeout to 600s instead of 120s ([21](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/21))
 
-<span id="id64" />
+<span id="id66" />
 
 ### New features
 
 *   Expose service errors to users ([8](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/8))
 *   Configure logging for a library ([10](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/10))
 
-<span id="id65" />
+<span id="id67" />
 
 ### Bug fixes
 
 *   Correctly parse string boolean for ai param ([7](https://github.com/Qiskit/qiskit-ibm-transpiler/pull/7))
 
-<span id="id66" />
+<span id="id68" />
 
 ## 0.4.3 (2024-06-07)
 
-<span id="id67" />
+<span id="id69" />
 
 ### Upgrade notes
 
 *   Check existence of credentials and raise related exceptions instead of breaking
 
-<span id="id68" />
+<span id="id70" />
 
 ## 0.4.2 (2024-06-07)
 
-<span id="id69" />
+<span id="id71" />
 
 ### Bug fixes
 
 *   Python 3.8 support. Back to specify types with typing
 *   Fixing some import errors for local modules
 
-<span id="id70" />
+<span id="id72" />
 
 ### Other notes
 
 *   Relaxing pin of local dependencies
 
-<span id="id71" />
+<span id="id73" />
 
 ## 0.4.1 (2024-06-06)
 
-<span id="id72" />
+<span id="id74" />
 
 ### Upgrade notes
 
 *   Updating logs levels
 
-<span id="id73" />
+<span id="id75" />
 
 ### Bug fixes
 
 *   Rebuild layout in transpiled circuit
 *   Avoid barrier nodes in collection
 
-<span id="id74" />
+<span id="id76" />
 
 ### Other notes
 
 *   Refactoring the extension code
 
-<span id="id75" />
+<span id="id77" />
 
 ## 0.4.0 (2024-05-28)
 
-<span id="id76" />
+<span id="id78" />
 
 ### Upgrade notes
 
 *   Updating Clifford service URL
 *   Replace `use_ai` by `ai` param in requests
 
-<span id="id77" />
+<span id="id79" />
 
 ### New features
 
 *   Request the synthesis of a list of circuits to the service.
 *   Adding docstrings for public documentation
 
-<span id="id78" />
+<span id="id80" />
 
 ### Bug fixes
 
 *   Adjust dependencies to be less strict and support minor version updates for qiskit & patch updates for qiskit-qasm3-import
 
-<span id="id79" />
+<span id="id81" />
 
 ### Other notes
 
 *   Move type hints in documentation.
 *   Set name to logger
 
-<span id="id80" />
+<span id="id82" />
 
 ## 0.3.0 (2024-02-29)
 
-<span id="id81" />
+<span id="id83" />
 
 ### Upgrade notes
 
 *   Updating the plugin to use Qiskit 1.0 by default
 
-<span id="id82" />
+<span id="id84" />
 
 ### Bug fixes
 
 *   Supporting measurements in circuits when transpiling using `ai=true` option
 
-<span id="id83" />
+<span id="id85" />
 
 ## 0.2.1 (2024-02-22)
 
-<span id="id84" />
+<span id="id86" />
 
 ### New features
 
 *   Add multithreading to synth requests. The requests to the service for transpile and transpile now are done in parallel.
 
-<span id="id85" />
+<span id="id87" />
 
 ### Upgrade notes
 
 *   Updated collection passes. Now the passes could work up to N of qubits or with any block size of qubits.
 
-<span id="id86" />
+<span id="id88" />
 
 ## 0.2.0 (2024-02-12)
 
-<span id="id87" />
+<span id="id89" />
 
 ### New features
 
 *   Added support for synthesis and transpilation of Clifford, Permutation and Linear Function circuits. Using new URLs for the service.
 
-<span id="id88" />
+<span id="id90" />
 
 ## 0.1.3 (2023-12-11)
 
-<span id="id89" />
+<span id="id91" />
 
 ### Bug fixes
 
@@ -501,7 +511,7 @@ in_page_toc_max_heading_level: 2
 *   Fixing hardcoded input to routing
 *   Fix bug in input and refactor
 
-<span id="id90" />
+<span id="id92" />
 
 ## 0.1.2 (2023-12-04)
 
